Correction de bug (vertical-align: middle; l.652).
git-svn-id: http://svn.sylogix.org/gepiphp/trunk@986 e073496e-d129-0410-8f7b-841bfd467322

--- a/style.css
+++ b/style.css
@@ -625,7 +625,7 @@ img.link {
 
 /*=================================*/
 
-#table_header {
+#table_header{
 	color: white;
 	/*
 	Ca ne fonctionne pas! Pas pris en compte???
@@ -649,7 +649,7 @@ img.link {
 
 
 #td_headerLeft{
-	vertical-align: center;
+	vertical-align: middle;
 	font-size: 10pt;
 
 	/* Ajout pour que les dernières connexions apparaissent aussi en blanc et ressortent bien sur le bandeau sombre de l'entête */
